Demo App #44 Stoplite Demo App: Refactor: Move EVQx Package
* `git mv` Board folder to workspace root. after this, had to manually patch `.gitmodules`
* Fix Eclipse project
* Fix LW/CVI project
* Update VS2010. Not buildable
* Fix Doxy project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "cwsw_lib"]
 	path = cwsw_lib
 	url = git@github.com:kbecker0619/cwsw_lib.git
-[submodule "test/libs/cwsw_eventqueue"]
-	path = test/libs/cwsw_eventqueue
+[submodule "cwsw_eventqueue"]
+	path = cwsw_eventqueue
 	url = git@github.com:kbecker0619/cwsw_eventqueue.git
 [submodule "cwsw_board"]
 	path = cwsw_board
