--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -55,7 +55,19 @@
                                 								
                                 <option id="gnu.cpp.compiler.mingw.exe.debug.option.debugging.level.446287234" name="Debug Level" superClass="gnu.cpp.compiler.mingw.exe.debug.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath"/>
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_event/inc&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue/inc&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue_ex/inc&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_board/bd_gtk&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_board/common&quot;"/>
+                                    								
+                                </option>
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.preprocessor.def.1797760866" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
                                     									
@@ -89,12 +101,6 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.2128645034" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_event/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_evqueue/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_evqueue_ex/inc&quot;"/>
-                                    									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_clock_services/cwsw_clock/inc&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_clock_services/cwsw_swtimer/inc&quot;"/>
@@ -126,6 +132,12 @@
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_board/bd_gtk&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_board/common&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_event/inc&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue/inc&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue_ex/inc&quot;"/>
                                     								
                                 </option>
                                 								
@@ -221,41 +233,9 @@
                         					
                     </folderInfo>
                     					
-                    <folderInfo id="cdt.managedbuild.config.gnu.mingw.exe.debug.1736302436.1068981615" name="/" resourcePath="cwsw_board/none">
-                        						
-                        <toolChain id="cdt.managedbuild.toolchain.gnu.mingw.exe.debug.657817735" name="MinGW GCC" superClass="cdt.managedbuild.toolchain.gnu.mingw.exe.debug" unusedChildren="">
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.448275396" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.955745680">
-                                								
-                                <inputType id="cdt.managedbuild.tool.gnu.assembler.input.2138991777" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
-                                							
-                            </tool>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.1179851633" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base.1004530742"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.exe.debug.269121468" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.exe.debug.1050297134">
-                                								
-                                <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.591849210" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
-                                							
-                            </tool>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.exe.debug.1283837257" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.exe.debug.1489450762">
-                                								
-                                <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1350290316" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
-                                							
-                            </tool>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.1608329448" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.1268148108"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.1153791343" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.1051958027"/>
-                            						
-                        </toolChain>
-                        					
-                    </folderInfo>
-                    					
                     <sourceEntries>
                         						
-                        <entry excluding="cwsw_board/none|cwsw_board/bd_lwcvi|cwsw_lib/test|cwsw_arch/test|cwsw_sme/src/cwsw_sme.template.c|libs/cwsw_board/bd_lwcvi|component/cwsw_sme/src/cwsw_sme.template.c|libs/cwsw_board/none|libs/cwsw_eventqueue/test|component/cwsw_event/test|libs/cwsw_arch/test|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|src|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|libs/cwsw_swtimer|bsw/svc/cwsw_evq/test|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|libs/cwsw_board_old|component/test" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding="cwsw_eventqueue/test|cwsw_board/none|cwsw_board/bd_lwcvi|cwsw_lib/test|cwsw_arch/test|cwsw_sme/src/cwsw_sme.template.c|libs/cwsw_board/bd_lwcvi|component/cwsw_sme/src/cwsw_sme.template.c|libs/cwsw_board/none|libs/cwsw_eventqueue/test|component/cwsw_event/test|libs/cwsw_arch/test|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|src|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|libs/cwsw_swtimer|bsw/svc/cwsw_evq/test|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|libs/cwsw_board_old|component/test" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                         					
                     </sourceEntries>
                     				
@@ -317,19 +297,9 @@
                     					
                     <externalSetting contentTypes="org.eclipse.cdt.core.cSource:org.eclipse.cdt.core.cxxSource">
                         						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_event/inc"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_evqueue/inc"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_evqueue_ex/inc"/>
-                        						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_clock_services/cwsw_clock/inc"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_clock_services/cwsw_swtimer/inc"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_board/bd_gtk"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_board/common"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gtk-3.0"/>
                         						
@@ -354,6 +324,16 @@
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_arch/inc/i386"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_sme/inc"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_board/bd_gtk"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_board/common"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_eventqueue/cwsw_event/inc"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue/inc"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue_ex/inc"/>
                         					
                     </externalSetting>
                     				
