--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -46,6 +46,11 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_board</locationURI>
 		</link>
 		<link>
+			<name>cwsw_eventqueue</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_eventqueue</locationURI>
+		</link>
+		<link>
 			<name>cwsw_lib</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_lib</locationURI>
