--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -57,6 +57,10 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_clock_services/cwsw_clock/inc&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_clock_services/cwsw_swtimer/inc&quot;"/>
+                                    									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_event/inc&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue/inc&quot;"/>
@@ -103,7 +107,7 @@
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app&quot;"/>
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app/cfg&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_lib/inc&quot;"/>
                                     									
@@ -297,24 +301,6 @@
                     					
                     <externalSetting contentTypes="org.eclipse.cdt.core.cSource:org.eclipse.cdt.core.cxxSource">
                         						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_clock_services/cwsw_clock/inc"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_clock_services/cwsw_swtimer/inc"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gtk-3.0"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/glib-2.0"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/lib/glib-2.0/include"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/pango-1.0"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/cairo"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gdk-pixbuf-2.0"/>
-                        						
-                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/atk-1.0"/>
-                        						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../app"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../app/cfg"/>
@@ -334,6 +320,24 @@
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue/inc"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue_ex/inc"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_clock_services/cwsw_clock/inc"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_clock_services/cwsw_swtimer/inc"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gtk-3.0"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/glib-2.0"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/lib/glib-2.0/include"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/pango-1.0"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/cairo"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gdk-pixbuf-2.0"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/atk-1.0"/>
                         					
                     </externalSetting>
                     				
