--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -31,6 +31,11 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/app</locationURI>
 		</link>
 		<link>
+			<name>cfg</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cfg</locationURI>
+		</link>
+		<link>
 			<name>component</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/component</locationURI>
