--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -57,6 +57,10 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_cwsw&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_tedlos&quot;"/>
+                                    									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_clock_services/cwsw_clock/inc&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_clock_services/cwsw_swtimer/inc&quot;"/>
@@ -107,7 +111,9 @@
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app&quot;"/>
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_cwsw&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_tedlos&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_lib/inc&quot;"/>
                                     									
@@ -239,7 +245,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding="cwsw_clock_services/cwsw_swtimer/test|cwsw_clock_services/cwsw_clock/test|cwsw_eventqueue/test|cwsw_board/none|cwsw_board/bd_lwcvi|cwsw_lib/test|cwsw_arch/test|cwsw_sme/src/cwsw_sme.template.c|libs/cwsw_board/bd_lwcvi|component/cwsw_sme/src/cwsw_sme.template.c|libs/cwsw_board/none|libs/cwsw_eventqueue/test|component/cwsw_event/test|libs/cwsw_arch/test|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|src|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|libs/cwsw_swtimer|bsw/svc/cwsw_evq/test|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|libs/cwsw_board_old|component/test" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding="component/cwsw_event/test|cwsw_board/bd_lwcvi|libs/cwsw_arch/test|libs/cwsw_eventqueue/test|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|component/cwsw_sme/src/cwsw_sme.template.c|src|cwsw_lib/test|libs/cwsw_swtimer|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|cwsw_board/none|component/test|cwsw_arch/test|cwsw_sme/src/cwsw_sme.template.c|cwsw_eventqueue/test|libs/cwsw_board/bd_lwcvi|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|bsw/svc/cwsw_evq/test|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|cwsw_clock_services/cwsw_swtimer/test|cwsw_clock_services/cwsw_clock/test|libs/cwsw_board/none|libs/cwsw_board_old" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                         					
                     </sourceEntries>
                     				
@@ -303,7 +309,9 @@
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../app"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../app/cfg"/>
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cfg_cwsw"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cfg_tedlos"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../cwsw_lib/inc"/>
                         						
@@ -512,6 +520,8 @@
                                     <listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/common&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_tedlos&quot;"/>
                                     								
                                 </option>
                                 								
