--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -31,9 +31,14 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/app</locationURI>
 		</link>
 		<link>
-			<name>cfg</name>
+			<name>cfg_cwsw</name>
 			<type>2</type>
-			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cfg</locationURI>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cfg_cwsw</locationURI>
+		</link>
+		<link>
+			<name>cfg_tedlos</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cfg_tedlos</locationURI>
 		</link>
 		<link>
 			<name>component</name>
