Removed hard-coded dependency of Buttons to implementation-specific Event and Event Queue values.
Eclipse project runs, LW/CVI project runs, VS2010 project does not build

* Moved board scheduler for GTK board to new folder "os-board-fusion" (_horrible_ name, but descriptive to my intent. Will change name later)
* Updated dependencies of new Board Scheduler module according to findings in VS2010 bring-up
* Updated LW/CVI project
* Added XML creation to Doxy, for side trip along dependency-tree analysis

Demo App #32: Stoplite Demo App: Separate Button DI from BSP + Demo App #28: Stoplite Demo App: Restore MSVC Project

--- a/test/ecproject/Debug/makefile
+++ b/test/ecproject/Debug/makefile
@@ -57,7 +57,7 @@ all: EventQueue.exe
 EventQueue.exe: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MinGW C++ Linker'
-	g++ `pkg-config --libs gtk+-3.0` -o "EventQueue.exe" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -Xlinker -Map="EventQueue.map" -Xlinker --cref `pkg-config --libs gtk+-3.0` -o "EventQueue.exe" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
